--- a/app/views/dpms/step2.html.erb
+++ b/app/views/dpms/step2.html.erb
@@ -13,7 +13,7 @@
 <% derivative = deriv(pstrain) %>
 <% graph << rounder(pstrain, 4) %>
 <% graph << rounder(derivative, 4) %>
-<% intersections = intersection(pstrain, derivative, 0.2)%>
+<% intersections = intersection(pstrain, derivative, 0.1)%>
 <strong>STEP 2: Choose a Necking Point</strong>
 <p>
 <%= line_chart graph.map.with_index {|ea, i| {:name => i+1, :data => ea}}, {discrete: true, library: {pointSize: 0, title: "Tstress vs. Pstrain", vAxis: { viewWindow:{ max:maxMin[0]*1.1, min:maxMin[1]}}}}%>
@@ -31,8 +31,7 @@
       </ul>
     </div>
   <% end %>
-  <p>Recommended Necking Points</p>
-<p></p>
+  <p>RECOMMENDED NECKING POINT</p>
   <p><%= intersections %></p>
   <div class="field">
   	<%= f.label :necking_point %><br>
