--- a/app/views/dpms/step2.html.erb
+++ b/app/views/dpms/step2.html.erb
@@ -16,7 +16,7 @@
 <% intersections = intersection(pstrain, derivative, 0.1)%>
 <strong>STEP 2: Choose a Necking Point</strong>
 <p>
-<%= line_chart graph.map.with_index {|ea, i| {:name => i+1, :data => ea}}, {discrete: true, library: {pointSize: 0, title: "Tstress vs. Pstrain", vAxis: { viewWindow:{ max:maxMin[0]*1.1, min:maxMin[1]}}}}%>
+<%= line_chart graph.map.with_index {|ea, i| {:name => i+1, :data => ea}}, {discrete: true, library: {pointSize: 0, title: "Hardening Curve", vAxis: { title: "True Stress (MPa)", viewWindow:{ max:maxMin[0]*1.1, min:maxMin[1]}}, hAxis: {title: "True Plastic Strain"}}}%>
 </p>
 
 <%= form_for(@dpm, :url => step2_path(:id => @dpm.id), :method => 'put') do |f| %>
