View changes, output helper

--- a/app/views/dpms/step1.html.erb
+++ b/app/views/dpms/step1.html.erb
@@ -35,9 +35,8 @@
     <%= f.number_field :gauge_length %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Next Step" %>
   </div>
 <% end %>
 
-<%= link_to 'Change input file', edit_dpm_path(@dpm) %> |
-<%= link_to 'Back', dpms_path %>
+<%= link_to 'Change input file', edit_dpm_path(@dpm) %>
