--- a/app/views/dpms/step5.html.erb
+++ b/app/views/dpms/step5.html.erb
@@ -54,13 +54,228 @@
       </ul>
     </div>
   <% end %>
+<div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :mid %><br>
+    <%= f.number_field :mid, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :ro %><br>
+    <%= f.number_field :ro, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :eee %><br>
+    <%= f.number_field :eee, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :pr %><br>
+    <%= f.number_field :pr, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :sigy %><br>
+    <%= f.number_field :sigy, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :etan %><br>
+    <%= f.number_field :etan, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :fail %><br>
+    <%= f.number_field :fail, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :tdel %><br>
+    <%= f.number_field :tdel, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :c %><br>
+    <%= f.number_field :c, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :p %><br>
+    <%= f.number_field :p, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :lcss %><br>
+    <%= f.number_field :lcss, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :lcsr %><br>
+    <%= f.number_field :lcsr, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :vp %><br>
+    <%= f.number_field :vp, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :lcf %><br>
+    <%= f.number_field :lcf, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :eps1 %><br>
+    <%= f.number_field :eps1, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :eps2 %><br>
+    <%= f.number_field :eps2, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :eps3 %><br>
+    <%= f.number_field :eps3, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :eps4 %><br>
+    <%= f.number_field :eps4, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :eps5 %><br>
+    <%= f.number_field :eps5, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :eps6 %><br>
+    <%= f.number_field :eps6, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :eps7 %><br>
+    <%= f.number_field :eps7, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :eps8 %><br>
+    <%= f.number_field :eps8, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :es1 %><br>
+    <%= f.number_field :es1, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :es2 %><br>
+    <%= f.number_field :es2, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :es3 %><br>
+    <%= f.number_field :es3, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :es4 %><br>
+    <%= f.number_field :es5, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :es6 %><br>
+    <%= f.number_field :es6, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :es7 %><br>
+    <%= f.number_field :es7, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :es8 %><br>
+    <%= f.number_field :es8, :step => 'any' %>
+    </div>
+  </div>
+</div>
+<div class="col-lg-3">
+    <div class="field">
+    <%= f.label :lcid %><br>
+    <%= f.number_field :lcid, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :sidr %><br>
+    <%= f.number_field :sidr, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :sfa %><br>
+    <%= f.number_field :sfa, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :sfo %><br>
+    <%= f.number_field :sfo, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :offa %><br>
+    <%= f.number_field :es6, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :offo %><br>
+    <%= f.number_field :es6, :step => 'any' %>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="field">
+    <%= f.label :dattyp %><br>
+    <%= f.number_field :es6, :step => 'any' %>
+    </div>
+  </div>
 
-  <p>TODO: Add attributes for the final output variable values, We can store them and produce the right output for LS Dyna</p>
-  <div class="field">
-    <%= f.label :necking_point %><br>
-    <%= f.number_field :necking_point, :step => 'any' %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+</br></br></br></br>
+
+<div class="actions">
+    <%= f.submit "Finish" %>
+</div>
 <% end %>
