--- a/app/views/dpms/step2.html.erb
+++ b/app/views/dpms/step2.html.erb
@@ -18,7 +18,7 @@
 <p>
 <%= line_chart graph.map.with_index {|ea, i| {:name => i+1, :data => ea}}, {discrete: true, library: {pointSize: 0, title: "Hardening Curve", vAxis: { title: "True Stress (MPa)", viewWindow:{ max:maxMin[0]*1.1, min:maxMin[1]}}, hAxis: {title: "True Plastic Strain"}}}%>
 </p>
-
+<p>1 - Hardening Curve | 2 - Derivative</p>
 <%= form_for(@dpm, :url => step2_path(:id => @dpm.id), :method => 'put') do |f| %>
   <% if @dpm.errors.any? %>
     <div id="error_explanation">
@@ -38,10 +38,9 @@
     <%= f.number_field :necking_point, :step => 'any' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Next Step" %>
   </div>
 <% end %>
 
-<%= link_to 'Edit', edit_dpm_path(@dpm) %> |
+<%= link_to 'Change Input File', edit_dpm_path(@dpm) %> 
 
-<!-- TODO: have links going to the right places -->
