Holy crap we did it

--- a/app/views/dpms/step4.html.erb
+++ b/app/views/dpms/step4.html.erb
@@ -60,6 +60,11 @@
     <%= f.label :output_file %><br>
     <%= f.text_field :output_file%>
   </div>
+  <p>Please enter name of user completing DPM</p>
+  <div class="field">
+    <%= f.label :person %><br>
+    <%= f.text_field :person%>
+  </div>
 
     <%= f.submit "Next Step" %>
   </div>
