--- a/app/views/dpms/step2.html.erb
+++ b/app/views/dpms/step2.html.erb
@@ -31,7 +31,7 @@
       </ul>
     </div>
   <% end %>
-  <p>RECOMMENDED NECKING POINT</p>
+  <strong>RECOMMENDED NECKING POINTS</strong>
   <p><%= intersections %></p>
   <div class="field">
   	<%= f.label :necking_point %><br>
