--- a/app/views/dpms/step4.html.erb
+++ b/app/views/dpms/step4.html.erb
@@ -55,18 +55,23 @@
       </ul>
     </div>
   <% end %>
-  <p>Please enter output file name</p>
+ <div class="col-lg-3">
   <div class="field">
+  	<p>Please enter output file name</p>
     <%= f.label :output_file %><br>
     <%= f.text_field :output_file%>
   </div>
-  <p>Please enter name of user completing DPM</p>
+ </div>
+ <div class="col-lg-3">
   <div class="field">
+  <p>Please enter your name</p>
     <%= f.label :person %><br>
-    <%= f.text_field :person%>
+    <%= f.text_field :person, :title => "First/Last Name" %>
   </div>
-
+ </div>
+  <div class="actions">
     <%= f.submit "Next Step" %>
   </div>
+  <%= link_to 'Change Input File', edit_dpm_path(@dpm) %>
 <% end %>
 <% end %>
