--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,9 +7,9 @@
 		<h3><%= @user.email %></h3>
 		<p>This is your Dashboard! Choose what you want to do:</p>
 		<% if is_admin? %>
-			<p>DEBUG: YOU ARE ADMIN</p>
+			<p>YOU HAVE ADMIN ACCESS</p>
 		<% end %>
-		<%= button_to 'Edit Profile', edit_user_path %>
+		<%= link_to 'Edit Profile', edit_user_path %>
 		<h2> Your testfiles </h2>
 		<% if @testfiles.any? %>
 			<table class="table table-striped table-hover ">
@@ -23,10 +23,6 @@
       			<th>Date Added</th>
       			<th>Comments</th>
       			<th></th>
-      			<% if is_admin? %>
-      			<th></th>
-      			<th></th>
-      			<% end %>
     		</tr>
   			</thead>
 
@@ -40,8 +36,6 @@
   				<td><p><%= testfile.created_at.strftime("%l:%M:%S %p") %></p></td>
   				<td><p><%= testfile.created_at.strftime("%m/%d/%y") %></p></td>
   				<td><%= testfile.comments %></td>
-        		<td><%= link_to 'Edit', edit_testfile_path(testfile) %></td>
-        		<td><%= link_to 'Delete', testfile, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       			</tr>
     			<% end %>
   			</tbody>
@@ -60,10 +54,6 @@
       			<th>Time Addded</th>
       			<th>Date Added</th>
       			<th></th>
-      			<% if is_admin? %>
-      			<th></th>
-      			<th></th>
-      			<% end %>
     		</tr>
   			</thead>
 
@@ -74,11 +64,7 @@
   				<td><%= material.mat_type %></td>
   				<td><p><%= material.created_at.strftime("%l:%M:%S %p") %></p></td>
   				<td><p><%= material.created_at.strftime("%m/%d/%y") %></p></td>
-  				<% if is_admin? %>
-        		<td><%= link_to 'Edit', edit_material_path(material) %></td>
-        		<td><%= link_to 'Delete', material, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       			</tr>
-      			<% end %>
     			<% end %>
   			</tbody>
 
